CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(learn_algorithm_programmers)

SET(CMAKE_CXX_STANDARD 17)

INCLUDE(FetchContent)

FetchContent_Declare(
    Catch2
    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
    GIT_TAG v3.0.1
)

FetchContent_MakeAvailable(Catch2)

ADD_SUBDIRECTORY(42576)
ADD_SUBDIRECTORY(42577)
ADD_SUBDIRECTORY(42578)
ADD_SUBDIRECTORY(42579)
ADD_SUBDIRECTORY(42583)
ADD_SUBDIRECTORY(42584)
ADD_SUBDIRECTORY(42586)
ADD_SUBDIRECTORY(42587)
ADD_SUBDIRECTORY(42626)
ADD_SUBDIRECTORY(42627)
ADD_SUBDIRECTORY(42628)
